samples/_failures_safe/1761304129_b7ee0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dc71fc6.c: In function ‘main’:
./samples/SAFE/__tmp_1dc71fc6.c:161:23: error: expected ‘;’ at end of input
  161 |         input[len - 1]
      |                       ^
      |                       ;
./samples/SAFE/__tmp_1dc71fc6.c:161:9: error: expected declaration or statement at end of input
  161 |         input[len - 1]
      |         ^~~~~
./samples/SAFE/__tmp_1dc71fc6.c:161:9: error: expected declaration or statement at end of input
